# yfinance-agent

./: .dockerignore  .env.example  .gitignore  .secrets.example  Dockerfile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml
src/: agent_models.py  config.py  dashboard.py  data_client.py  llm_service.py  llm_validation.py  plots.py  portfolio.py  portfolio_display_summary.py  recommendations.py  summaries.py  tickr_data_manager.py  tickr_summary_manager.py
src/agents/: __init__.py  base.py  creator.py  evaluator.py  orchestrator.py
tests/: test_agent_base.py  test_config.py  test_creator_agent.py  test_dashboard.py  test_data_client.py  test_evaluator_agent.py  test_llm_service.py  test_llm_validation.py  test_main.py  test_orchestrator.py  test_plots.py  test_portfolio.py  test_portfolio_display_summary.py  test_summaries.py  test_tickr_data_manager.py  test_tickr_summary_manager.py
