# Added comments about using `--no-root` for dependency management
[tool.poetry]
name = "yfinance-agent"
version = "0.1.0"
description = "An AI-powered stock analysis dashboard using Streamlit, Yfinance, and OpenRouter."
authors = ["Divyansh Tripathi <your-email@example.com>"]
package-mode = false # Using Poetry for dependency management only, not for packaging or installing the project itself

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "*"
yfinance = "*"
openai = "*"
openrouter = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
omegaconf = "*"
plotly = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Removed [tool.poetry.packages] as it is not needed when using --no-root

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"